# x11-autoclicker-gui

./: .gitignore  Cargo.toml
packaging/: x11-autoclicker-gui.desktop
src/: main.rs
